# desertbus-games

./: .gitignore  README.md  TODO.md  copyright.json  copyright.json.license  desertbus.service  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  tox.ini
LICENSES/: LicenseRef-DesertBus.txt
only-connect/: connections.json  index.html  script.js  sequences.json  sequences.json.license  style.css
only_connect/: __init__.py  __main__.py  config.py  state.py
only_connect/resources/: display.html  gm.html  script.js  style-display.css  style.css
src/catbox/: __main__.py  blob.py  logger.py  room.py  static.py  user.py
src/catbox/dom/: __init__.py
src/catbox/engine/: __init__.py  engine.py  episode.py
src/catbox/games/: __init__.py
src/catbox/games/only_connect/: __init__.py  cms.py  engine.py  episode.py  play.py
src/catbox/games/only_connect/play/: __init__.py  state_machine.py
src/catbox/games/only_connect/resources/: edit.css  edit.js  gm.js  onlyconnect.css  onlyconnect.js
src/catbox/games/this_or_that/: __init__.py  cms.py  engine.py  play.py  question.py
src/catbox/games/this_or_that/resources/: audience.js  edit.css  edit.js  general.js  gm.js  player.js  this-or-that.css
src/catbox/site/: __init__.py  cms_index.py  error_pages.py  game_index.py  notification_index.py  play_game.py  review_index.py  state.py
src/catbox/site/resources/: background.png.license  create_room.html  defs.css  elems.js  gm.css  gm.js  index.html  info.html  notify.js  socket.js  style.css
src/db_games/: __init__.py  __main__.py  abc.py  dom.py
src/db_games/only_connect/: __init__.py
src/db_games/only_connect/resources/: display.html  gm.html  script.js  style-display.css  style.css
src/db_games/resources/: defs.css  style.css
src/db_games/this_or_that/: __init__.py  init.sql
src/db_games/this_or_that/resources/: this-or-that.css
src/dom/: __init__.py
src/webapp/: __init__.py
